Fix: Container handles are being overridden due to z-index value assigned to the container [ED-6714]

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -20,7 +20,7 @@
 	--padding-bottom: var( --container-default-padding, 0px );
 	--padding-left: var( --container-default-padding, 0px );
 	--position: relative;
-	--z-index: 0;
+	--z-index: revert;
 	--overflow: visible;
 	--transition: 0;
 	--gap: var( --widgets-spacing, 20px ); // Use the gap from `Site Settings` or default to 20px.
